<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title_card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="24sp"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#4d3322"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/montypython" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textSize="24sp"
                android:textAlignment="center"
                android:padding="10dp"
                android:textColor="#4d3322" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/question_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/knight_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/question_name" />

                <EditText
                    android:id="@+id/knight_name_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_name"
                    android:inputType="textCapWords"
                    android:layout_below="@id/knight_name" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/question_land"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp" >

                <TextView
                    android:id="@+id/knight_land"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/question_land" />

                <EditText
                    android:id="@+id/knight_land_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_land"
                    android:inputType="text"
                    android:layout_below="@id/knight_land" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/question_magician"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp" >

                <TextView
                    android:id="@+id/black_knight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/question_black_knight" />

                <CheckBox
                    android:id="@+id/black_legs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/black_legs"
                    android:layout_below="@id/black_knight" />
                <CheckBox
                    android:id="@+id/black_arms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/black_arms"
                    android:layout_below="@id/black_legs" />
                <CheckBox
                    android:id="@+id/black_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/black_head"
                    android:layout_below="@id/black_arms" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/question_swallow"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp" >

                <TextView
                    android:id="@+id/magician"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/question_magician" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/magician_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/magician">
                    <RadioButton android:id="@+id/magician_frank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_magician_frank"
                        android:layout_marginLeft="20dp"/>
                    <RadioButton android:id="@+id/magician_tim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question_magician_tim" />
                    <RadioButton android:id="@+id/magician_merlin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/question_magician_merlin" />
                </RadioGroup>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center"
            android:backgroundTint="#4d3322"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="submitAnswers"/>
    </LinearLayout>

</ScrollView>